--- a/.github/workflows/semantic-release-dry-run.yml
+++ b/.github/workflows/semantic-release-dry-run.yml
@@ -1,28 +1,26 @@
-name: Semantic Release
+name: Semantic Release Dry Run
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Manuell über GitHub UI auslösbar
 
 jobs:
-  release:
+  dry-run:
     runs-on: ubuntu-latest
+    name: Dry-Run Semantic Release
 
     steps:
-    - name: Checkout repo
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        registry-url: 'https://registry.npmjs.org/'
 
     - name: Install dependencies
       run: npm install
 
-    - name: Run semantic-release
+    - name: Semantic Release (dry run)
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: npx semantic-release
+      run: npx semantic-release --dry-run
