--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,6 @@
 {
   "branches": ["main"],
+  "repositoryUrl": "https://x-access-token:${GH_TOKEN}@github.com/mircsicz/ansible_role_docker-install.git",
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
